--- a/src/app/components/style.css
+++ b/src/app/components/style.css
@@ -16,7 +16,7 @@
     box-sizing: border-box;
 }
 
-h1 {
+.head-container h1 {
     font-size: 64px;
 }
 
@@ -226,8 +226,11 @@ button {
 }
 
 .order-container {
+    padding: 20px 20px;
+    font-size: 15px;
     display: flex;
-    padding: 0 20px;
+    align-items: center;
+    gap: 100px;
 }
 
 .order-info {
@@ -235,6 +238,8 @@ button {
     justify-content: space-between;
     flex-direction: column;
     width: 100%;
+    gap: 10px;
+    
 }
 
 .order-info a {
@@ -251,4 +256,52 @@ button {
     display: flex;
     justify-content: space-between;
     width: 100%;  
+}
+
+.order-buttons {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.modal-container {
+    position: fixed; 
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10; 
+    border-radius: 0.75rem; 
+    width: 100%;
+    max-width: 534px;
+}
+
+.modal-container h1 {
+    font-size: 20px;
+    margin: 0px;
+    font-weight: 600;
+    color: #ffffff;
+} 
+
+.modal-one {
+    margin-bottom: 1rem; 
+    display: flex; 
+    align-items: center;
+    justify-content: space-between; 
+    background: linear-gradient(45deg, #D986FF, #3C15C6); 
+    padding: 10px 10px;
+}
+
+.modal-main {
+    padding: 20px;
+}
+
+.modal-button-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-butoon {
+    background-color: #8047DF;
+    color: #FFFFFF;
 }
