--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -37,4 +37,35 @@
 .mainOrder {
   background-color: #8449E0;
   color: #ffffff;
+  width: 100%;
+  max-width: 1000px;
+  border-radius: 10px;
+}
+
+.modalInfo {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 20px;
+  color: #A3A3A3;
+}
+
+.modalVariables {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 10px;
+}
+
+.modalVariable {
+  display: flex;
+  flex-direction: column;
+  color:#8449E0;
+  gap: 10px;
+}
+
+.modalValue {
+  color: #A3A3A3;
+  background-color: #E7E7E7;
+  padding: 10px 50px 10px 15px;
+  border-radius: 10px;
+  max-width: 100px;
 }
